--- a/flowallet/pom.xml
+++ b/flowallet/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>qrgen</artifactId>
             <version>1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+		<dependency>
+    		<groupId>org.bouncycastle</groupId>
+    		<artifactId>bcprov-jdk15on</artifactId>
+    		<version>1.59</version>
+		</dependency>
     </dependencies>
     <artifactId>flowallet</artifactId>
 </project>
