Bali nights service and Donate lflo service is being implemented.

--- a/flowallet/.classpath
+++ b/flowallet/.classpath
@@ -16,7 +16,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<accessrules>
+			<accessrule kind="accessible" pattern="javafx/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/sagar/.m2/repository/com/madgag/spongycastle/core/1.51.0.0/core-1.51.0.0.jar">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
