--- a/flowallet/.classpath
+++ b/flowallet/.classpath
@@ -21,5 +21,7 @@
 			<accessrule kind="accessible" pattern="javafx/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/sagar/Desktop/java-mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sagar/Downloads/apache-commons-lang.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
