--- a/flowallet/pom.xml
+++ b/flowallet/pom.xml
@@ -92,6 +92,16 @@
     		<artifactId>bcprov-jdk15on</artifactId>
     		<version>1.59</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
+		<dependency>
+    		<groupId>commons-codec</groupId>
+    		<artifactId>commons-codec</artifactId>
+   		 	<version>1.4</version>
+		</dependency>
     </dependencies>
     <artifactId>flowallet</artifactId>
 </project>
