--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,12 @@
         <scope>runtime</scope>
         <optional>true</optional>
       </dependency>
-  </dependencies>
+      <dependency>
+    <groupId>org.fxmisc.easybind</groupId>
+    <artifactId>easybind</artifactId>
+    <version>1.0.0</version>
+	</dependency>
+</dependencies>
 
   <prerequisites>
       <maven>3.0.4</maven>
